# pyproject.toml

[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'py-jup-decoder'
version = '0.1.4'
description = 'Copied from https://github.com/jup-ag/instruction-parser'
dependencies = [
    'solana>=0.34.3',
    'solders>=0.21.0',
    'anchorpy>=0.20.1',
    'aiohttp>=3.10.9',
    'base58>=2.1.1'
]
requires-python = '>=3.9'

[tool.bumpver]
current_version = "2024.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.rst" = [
    "{version}",
    "{pep440_version}",
]

